social media listed

--- a/html_advanced/24-index.html
+++ b/html_advanced/24-index.html
@@ -157,6 +157,11 @@
             <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
             <a href="https://twitter.com/holbertonschool">Twitter</a>
             <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
+            <ul>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+            </ul>
         </div>
     </footer>
 </body>
