--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -133,7 +133,7 @@
                 <div>
                     <article>
                         <blockquote>
-                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!1</p>
+                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
                             <footer>Yuri Y.</footer>
                         </blockquote>
                     </article>
