--- a/flexbox/13-article.html
+++ b/flexbox/13-article.html
@@ -50,13 +50,15 @@
     <!– Main –>
     <main>
       <!– Hero section –>
-      <header class="section-hero" class="hero-article" style="background-image: url(/images/pic-article-02.jpg);" data-section-theme="dark">
-      
+      <header class="section-hero" class="hero-article" data-section-theme="dark" style="background-image: url(/images/pic-article-02.jpg);">
         <div class="container">
           <div class="section-body">
             <section class="section-inner">
-              <span class="section-category">Digital Life</span>
-              <h1 class="section-title">Ut alios omittam, hunc appello, quem ille unum secutus est</h1>
+              <span class="section-category">
+                Digital Life
+              </span>
+              <h1 class="section-title">Ut alios omittam, hunc appello, quem ille unum secutus est
+              </h1>
             </section>
           </div>
         </div>
@@ -80,7 +82,8 @@
                             <li class="post-meta-tag">
                                 <strong>Tags:</strong>
                                 <ul class="tag-list">
-                                    <li><a href="#" rel="tag">Web Design</a></li>
+                                    <li>
+                                        <a href="#" rel="tag">Web Design</a>                                    </li>
                                     <li><a href="#" rel="tag">UX</a></li>
                                 </ul>
                             </li>
@@ -90,7 +93,7 @@
                 </aside>
             </div>
         </div>
-      </div>
+    </div>
     </main>
     <!– Footer –>
     <footer class="footer" data-section-theme="dark">
