--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -152,7 +152,7 @@
               <h4>Newsletter</h4>
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
-                <label class="visually-hidden" for="email">Email</label>
+                <label class="visually-hidden" for="email"></label>
                 <div class="input-group">
                   <input id="email" class="form-control" type="email" name="email" autocomplete="email" required aria-required="true">
                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
